--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Jua');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+    box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body {
+    background: linear-gradient(50deg,#660257,#ba02ff, #ff1822);
 }
-
-.App-link {
-  color: #61dafb;
+#drum_machine {
+    text-align: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app_title {
+}
+.display-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: linear-gradient(30deg,#fea,#baf,#caf);
+    height: 100vh;
+}
+/*the container for the pad buttons */
+#display-pads {
+    display: grid;
+    grid-template-columns: repeat(3,minmax(20px,100px));
+    grid-template-rows: 60px 60px 60px;
+    grid-gap: 5px;
+    margin-top: 50px;
+}
+/*style the buttons */
+.drum-pad {
+    padding: 20px;
+    cursor: pointer;
+    background-color: #333333;
+    color : #fff ;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 3px rgba(0,0,0,.2);
+    border-radius: 4px;
+    transition: all 400ms ease-in-out;
+    text-align: start;
+    font-size: 30px;
+    font-weight: bold;
+    font-style: italic;
+    font-family: 'Jua', sans-serif;
+    text-shadow: 0 3px 4px 1px rgba(0,0,0,.1), 0 2px 3px rgba(0,0,0,.2);
+}
+.drum-pad:hover{
+    background-color: #404040;
+}
+.drum-pad:active{
+    transform: scale(1.2) rotate(20deg);
+}
+.current-text {
+    text-align: center;
+    position: relative;
+    font-size: 50px;
+    font-family: 'Jua', sans-serif;
+    color:#111111;
 }
